--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+.body{
     background: #F2F2F2;
     max-width: 1920px;
     position: absolute;
@@ -16,12 +16,12 @@ body{
     height: 923px;
     top: 107px;
 }
-h1{
+.h1{
     color: #4C4C4C;
     padding-bottom: 20px;
     margin-bottom: 20px;
     border-bottom: 2px solid #BEBEBE;
 }
-p{
+.p{
     font:italic;
 }
