--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-.body{
+body{
     background: #F2F2F2;
     max-width: 1920px;
-    position: absolute;
     height: 7170px;
-    margin: 10px auto;
-    padding: 30px;
+    position: absolute;
 }
 .block1{
     width: 1920;
@@ -16,12 +14,12 @@
     height: 923px;
     top: 107px;
 }
-.h1{
+h1{
     color: #4C4C4C;
     padding-bottom: 20px;
     margin-bottom: 20px;
     border-bottom: 2px solid #BEBEBE;
 }
-.p{
+p{
     font:italic;
 }
