--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     width: 1920;
     height: 1000px;
     background-color: black;
+    margin: -20px -20px 0 0;
 }
 .imgMain{
     width: 1920px;
