--- a/reg/style.css
+++ b/reg/style.css
@@ -1,5 +1,10 @@
+body{
+    background: url("photo_2022-11-05_21-51-12.jpg");
+    align-items: center;
+}
 .cool{
     width: 500px;
-    height: 200px;
-    background: #000 url(photo_2022-11-05_21-51-12.jpg);
+    height: 500px;
+    margin-top: 250px;
+    align-items: center;
 }
