--- a/reg/style.css
+++ b/reg/style.css
@@ -29,7 +29,7 @@
 .GW{
     width: 100px;
     height: 60px;
-    background: rebeccapurple;
+    background: #575656;
     font-size: 28px;
     line-height: 10%;
     position: absolute;
