--- a/style.css
+++ b/style.css
@@ -1,17 +1,52 @@
 body{
+    width: 100%;
+
     overflow-x: hidden;
     background: #F2F2F2;
-    max-width: 1920px;
     height: 7170px;
     position: absolute;
 }
 .block1{
-    width: 1900;
     height: 1200px;
+    width: 100%;
     background-color: black;
     margin: -10px 0 0 -10px;
 }
 .imgMain{
-    width: 1900px;
-    height: 920px;
+    width: 100%;
+    height: 620px;
+}.header{
+    height: 60px;   
+    width: auto;
+    background: #575656;
+}
+.aboutus{
+    display: flex;
+    height: 60px;
+    width: 1050px;
+    float: right;
+    background: #0000;
+    padding-left: 30px ;
+    margin-left: 30%;
+}
+.sq{
+    color: #d1cccc;
+    padding-left: 20px;
+}
+.alllink{
+    font-size: 24px;
+    color: #d1cccc;
+}
+.GW{
+    width: 100px;
+    height: 60px;
+    background: #000000;
+    font-size: 28px;
+    line-height: 10%;
+    position: absolute;
+    padding-left: 5px;
+}
+.lnk{
+line-height: 100%;
+color: #d1cccc;
 }
