--- a/entrance/style.css
+++ b/entrance/style.css
@@ -15,17 +15,18 @@
     height: 60px;
     width: 1050px;
     float: right;
-    background: #575656;
+    background: linear-gradient(90deg, #575656 0%, #68686b 35%, #a8a9aa 100%);
     padding-left: 30px ;
-    margin-left: 30%;
+    margin-left: 20%;
 }
 .sq{
     color: #d1cccc;
     padding-left: 20px;
 }
-.Entrance:hover{
-    background-color: #9b9b9b;
-    color: #363636;
+.sq1{
+    color: #d1cccc;
+    padding-left: 20px;
+    pointer-events: none;
 }
 .forgot{
     position: relative;
@@ -82,7 +83,7 @@ color: #d1cccc;
     height: 400px;
     margin-top: 200px;
     margin-left: 300px;
-    background: url("dumbbells-woman-exercise.jpg") rgba(0, 0, 0, 1);
+    background: url("dumbbells-woman-exercise.jpg");
     background-color: rgba(0, 0, 0, .5);
     background-size: 880px;
     border-radius: 80px; ;
@@ -96,6 +97,9 @@ color: #d1cccc;
 .forgot:hover{
 color: white;
 }
+.Entrance:hover{
+    background-color: #9b9b9b;
+    color: #363636;}
 .create:hover{
     color: white;
 }
@@ -117,4 +121,21 @@ from{
 to{
     color: black;
 }
+}
+.foot{
+    position: absolute;
+    top: 92%;
+    display: flex;
+    margin-left: 25%;
+}
+.footlnk{
+    display: inline-block;
+    vertical-align: top;  
+    width: calc(100% / 3 - 2%); 
+    padding-left: 85px;
+    min-height: 100px;
+    font-size: 18px;
+}
+.footlnk:hover{
+    color: black;
 }
