--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body{
     width: 100%;
-
     overflow-x: hidden;
     background: #F2F2F2;
     height: 7170px;
     position: absolute;
 }
 .block1{
-    height: 1200px;
+    height: 920px;
     width: 100%;
     background-color: black;
     margin: -10px 0 0 -10px;
@@ -21,13 +20,12 @@ body{
     background: #575656;
 }
 .aboutus{
+    margin-top: 10px;
     display: flex;
     height: 60px;
-    width: 1050px;
+    width: 1000px;
     float: right;
-    background: #0000;
-    padding-left: 30px ;
-    margin-left: 30%;
+    background: rgb(0, 0, 0);
 }
 .sq{
     color: #d1cccc;
@@ -38,6 +36,7 @@ body{
     color: #d1cccc;
 }
 .GW{
+    margin-top: 10px;
     width: 100px;
     height: 60px;
     background: #000000;
@@ -49,4 +48,94 @@ body{
 .lnk{
 line-height: 100%;
 color: #d1cccc;
+}
+.lnk:hover{
+    color: #797878;
+animation: clr 0.4s;
+}
+.sq:hover{
+    
+    color: #797878;
+animation: clr 0.4s;
+}
+@keyframes clr{
+from{
+    color: #d1cccc;
+}
+to{
+    color: #797878;
+}
+}
+.stock{
+    position: relative;
+    top: 550px;
+    left: 50px;
+    width: 400px;
+    height: 250px;
+    border: white 1px solid;
+    font-size: 48px;
+    color: white;
+    font-weight: bold;
+    line-height: 50%;
+} 
+.sas{
+    padding-left: 100px;
+}
+.P1{
+    font-size: 50px;
+}
+.p2{
+    font-size: 38px;
+}
+.info{ 
+    position: absolute;
+    height: 550px;
+    width: 600px;
+    margin-left: 100px;
+    margin-top: 80px ;
+    font-size: 25px;
+}
+.info1{
+    padding-right: 100px;
+}
+.hallimg{
+    position: relative;
+    left: 660px;
+    top: 30px;
+}
+.img1{
+    width: 540px;
+    height: 420px;
+}
+.img2{
+    padding-left: 60px;
+    width: 60px;
+    height: 60px;
+}
+.txt1{
+    text-justify: newspaper;
+    zoom:1;
+    text-align-last: justify;
+}
+.bus{
+    width: 100px;
+    display: inline-block;
+    text-align: center;
+}
+.img3{
+    width: 50px;
+}
+.dum{
+    display: inline-block;
+     width: 100px;
+    text-align: center;
+}
+.arm{
+    display: inline-block;
+    width: 100px;
+    text-align: center;
+}
+.helpme{
+    width: 600px;
+    height: 200px;
 }
