--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ body{
 }
 .imgMain{
     width: 100%;
-    height: 620px;
-}.header{
+    height: 750px;
+    margin-top: -150px;
+}
+.header{
     height: 60px;   
     width: auto;
     background: #575656;
