--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 .imgMain{
     width: 100%;
     height: 750px;
-    margin-top: -150px;
+    margin-top: -160px;
 }
 .header{
     height: 60px;   
@@ -34,18 +34,18 @@ body{
     padding-left: 20px;
 }
 .alllink{
+    padding-top: 25px;
     font-size: 24px;
     color: #d1cccc;
 }
 .GW{
-    margin-top: 10px;
     width: 100px;
     height: 60px;
     background: #000000;
     font-size: 28px;
     line-height: 10%;
     position: absolute;
-    padding-left: 5px;
+    padding: 20px 0 0 25px;
 }
 .lnk{
 line-height: 100%;
