--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 .imgMain{
     width: 100%;
     height: 750px;
-    margin-top: -160px;
+    margin-top: -220px;
 }
 .header{
     height: 60px;   
@@ -78,25 +78,22 @@ to{
     font-size: 48px;
     color: white;
     font-weight: bold;
-    line-height: 50%;
+    line-height: 40%;
 } 
 .buttonMore{
     position: relative;
-    top: 450px;
-    left: 70%;
-    width: 300px;
-    height: 100px;
+    top: 490px;
+    left: 80%;
+    width: 260px;
+    height: 60px;
     border: black 1px solid;
     background-color: white;
     font-size: 48px;
 }
 .linkMore{
-    padding: 40px 0 0 40px;
+    padding: 0 0 0 20px;
     color: #2A487C;
     text-decoration: none;
-}
-.sas{
-    padding-left: 100px;
 }
 .P1{
     font-size: 50px;
