--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -30,10 +30,6 @@ body{
     float: right;
     background: rgb(0, 0, 0);
 }
-.sq{
-    color: #d1cccc;
-    padding-left: 20px;
-}
 .alllink{
     padding-top: 25px;
     font-size: 24px;
@@ -48,18 +44,21 @@ body{
     position: absolute;
     padding: 20px 0 0 25px;
 }
-.lnk{
-line-height: 100%;
-color: #d1cccc;
+.GWlink{
+    line-height: 100%;
+    color: #d1cccc;
 }
-.lnk:hover{
+.GWlink:hover{
     color: #797878;
-animation: clr 0.4s;
+    animation: clr 0.4s;
+}
+.sq{
+    color: #d1cccc;
+    padding-left: 20px;
 }
 .sq:hover{
-    
     color: #797878;
-animation: clr 0.4s;
+    animation: clr 0.4s;
 }
 @keyframes clr{
 from{
@@ -96,6 +95,12 @@ to{
     color: #2A487C;
     text-decoration: none;
 }
+.hallimg{
+    display: inline-block;
+    position: relative;
+    left: 150%;
+    top: -330px;
+}
 .info{ 
     position: absolute;
     height: 270px;
@@ -108,12 +113,6 @@ to{
     text-align: center;
     margin-top: -200px; 
     width: 1300px;
-}
-.hallimg{
-    display: inline-block;
-    position: relative;
-    left: 150%;
-    top: -330px;
 }
 .img2{
     padding-left: 60px;
