--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -19,11 +19,11 @@ body{
 }
 .header{
     height: 80px;   
-    width: auto;
-    background: black;
+    width: 90%;
+    background: rgb(0, 0, 0);
     position: fixed;
     z-index: 3;
-    background: black;
+    float: right;
 }
 .GW{
     width: 100px;
@@ -32,7 +32,7 @@ body{
     font-size: 28px;
     line-height: 10%;
     position: absolute;
-    padding: 20px 0 0 25px;
+    padding: 15px 0 0 20px;
 }
 .GWlink{
     line-height: 100%;
@@ -46,14 +46,13 @@ body{
     margin-top: 10px;
     display: flex;
     height: 60px;
-    width: 1000px;
+    width: 1200px;
     float: right;
     background: rgb(0, 0, 0);
-    margin-left: 50%;
 }
 .alllink{
-    padding-top: 25px;
-    font-size: 24px;
+    padding-top: 15px;
+    font-size: 30px;
     color: #d1cccc;
 }
 .sq{
@@ -87,17 +86,19 @@ to{
 .buttonMore{
     position: relative;
     top: 490px;
-    left: 80%;
+    left: 75%;
     width: 260px;
     height: 60px;
     border: black 1px solid;
     background-color: white;
     font-size: 48px;
+    border-radius: 16px;
 }
 .linkMore{
     padding: 0 0 0 20px;
     color: #2A487C;
     text-decoration: none;
+
 }
 .hallimg{
     display: inline-block;
