--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -89,16 +89,23 @@ to{
     left: 75%;
     width: 260px;
     height: 60px;
-    border: black 1px solid;
-    background-color: white;
+    border: rgb(255, 255, 255) 1px solid;
+    background-color: rgba(255, 255, 255, 0);
     font-size: 48px;
     border-radius: 16px;
 }
 .linkMore{
     padding: 0 0 0 20px;
-    color: #2A487C;
+    color: #ffffff;
     text-decoration: none;
 
+}
+.buttonMore:hover{
+    background: white;
+    border: black 1px solid;
+}
+.buttonMore:hover .linkMore{
+    color: #2A487C;
 }
 .hallimg{
     display: inline-block;
