--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -97,6 +97,7 @@ to{
 .linkMore{
     padding: 0 0 0 20px;
     color: #ffffff;
+    font-weight:normal;
     text-decoration: none;
 }
 .buttonMore:hover{
