--- a/entrance/style.css
+++ b/entrance/style.css
@@ -2,48 +2,50 @@
     background: linear-gradient(90deg, #363636 0%, #68686b 35%, #a8a9aa 100%);
     font-family: Playfair Display;
     height: 100%;
-/*    background: url("photo_2022-11-05_21-51-12.jpg"); */
     align-items: center;
 }
 .header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     height: 60px;   
-    width: auto;
     background: #575656;
+}
+.wrapper {
+    min-height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+.content {
+    min-height: calc(100vh - 150px);
+    flex: 1 0 auto;
+    display: flex;
 }
 .aboutus{
     display: flex;
     height: 60px;
-    width: 1000px;
-    float: right;
+    width: 90%;
     background: linear-gradient(90deg, #575656 0%, #68686b 35%, #a8a9aa 100%);
-    padding-left: 30px ;
-    margin-left: 20%;
+    margin-left: 10%;
+    font-size: 24px;
+    color: #9b9b9b;
 }
 .sq{
     color: #d1cccc;
-    padding-left: 20px;
-}
-.sq1{
-    color: #d1cccc;
-    padding-left: 20px;
-    pointer-events: none;
+    padding-left: 40px;
 }
 .forgot{
     position: relative;
     color: #9b9b9b;
     top: 60px;
 }
-.alllink{
-    font-size: 24px;
-    color: #d1cccc;
-}
 .GW{
-    width: 100px;
+    width: 10%;
     height: 60px;
     background: #575656;
     font-size: 28px;
     line-height: 10%;
-    position: absolute;
     padding-left: 5px;
 }
 .lnk{
@@ -78,16 +80,16 @@ color: #d1cccc;
     color: #d1cccc;
     
 }
-.cool{
+.main_content{
     width: 600px;
-    height: 400px;
-    margin-top: 200px;
+    height: 450px;
+    margin-top: 100px;
     margin-left: 300px;
     background: url("pictures/dumbbells-woman-exercise.jpg");
-    background-color: rgba(0, 0, 0, .5);
     background-size: 880px;
     border-radius: 80px; ;
     align-items: center;
+
 }
 .create{
     position: relative;
@@ -120,18 +122,16 @@ to{
     color: black;
 }
 }
-.foot{
-    position: absolute;
-    top: 92%;
+.footer{
+	height: 80px;
+    background: #575656;
+}
+.footer_content{
     display: flex;
-    margin-left: 25%;
+    justify-content: space-around;
+    align-items: center;
 }
 .footlnk{
-    display: inline-block;
-    vertical-align: top;  
-    width: calc(100% / 3 - 2%); 
-    padding-left: 85px;
-    min-height: 100px;
     font-size: 18px;
 }
 .footlnk:hover{
