--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -130,6 +130,12 @@ to{
     padding-left: 250px;
     margin-top: -20%;
 }
+.img4{
+    height: 700px;
+    width: 900px;
+    padding-left: 500px;
+    margin-top: -20%;
+}
 .info{ 
     position: absolute;
     height: 270px;
