--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -133,8 +133,8 @@ to{
 .img4{
     height: 700px;
     width: 900px;
-    padding-left: 500px;
-    margin-top: -20%;
+    padding-left: 45%;
+    margin-top: -27%;
 }
 .info{ 
     position: absolute;
