--- a/entrance/style.css
+++ b/entrance/style.css
@@ -56,7 +56,7 @@ color: #d1cccc;
     height: 40px;
     width: 190px;
     border-radius: 20px;
-    background: url("pictures/pass.png") no-repeat scroll 7px 7px #b8b5b5;
+    background: url("../pictures/pass.png") no-repeat scroll 7px 7px #b8b5b5;
     background-size: 20px;
     padding-left: 30px;
 }
@@ -70,7 +70,7 @@ color: #d1cccc;
     height: 40px;
     width: 190px;
     border-radius: 20px;
-    background: url("pictures/email.png") no-repeat scroll 7px 7px #b8b5b5;
+    background: url("../pictures/email.png") no-repeat scroll 7px 7px #b8b5b5;
     background-position:8px;
     background-size: 20px;
     padding-left: 30px;
@@ -85,7 +85,7 @@ color: #d1cccc;
     height: 450px;
     margin-top: 100px;
     margin-left: 300px;
-    background: url("pictures/dumbbells-woman-exercise.jpg");
+    background: url("../pictures/dumbbells-woman-exercise.jpg");
     background-size: 880px;
     border-radius: 80px; ;
     align-items: center;
