--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -22,6 +22,11 @@ body{
     width: 105%;
     background-color: white;
 }
+.block4{
+    width: 100%;
+    height: 920px;
+    padding-top: -20%;
+}
 .imgMain{
     padding-left: 9%;
     width: 80%;
@@ -135,6 +140,12 @@ to{
     width: 900px;
     padding-left: 45%;
     margin-top: -27%;
+}
+.img5{
+    width: 100%;
+    height: 1080px;
+    margin-top: -15%;
+    margin-left: -10px;
 }
 .info{ 
     position: absolute;
