--- a/entrance/style.css
+++ b/entrance/style.css
@@ -83,8 +83,8 @@ color: #d1cccc;
 .main_content{
     width: 600px;
     height: 450px;
-    margin-top: 100px;
-    margin-left: 300px;
+    margin-top: 10%;
+    margin-left: 35%;
     background: url("../pictures/dumbbells-woman-exercise.jpg");
     background-size: 880px;
     border-radius: 80px; ;
