--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -29,6 +29,13 @@ body{
     margin-top: -17%;
     margin-left: -10px;
 }
+.miniBlocks{
+    position: relative;
+    width: 500px;
+    height: 250px;
+    border-radius: 30px 30px 30px 30px;
+    background: #829096;
+}
 .imgMain{
     padding-left: 9%;
     width: 80%;
