--- a/sevices/style.css
+++ b/sevices/style.css
@@ -11,3 +11,9 @@ body{
     height: 60px;   
     background: #575656;
 }
+.wrapper {
+    min-height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
