--- a/UserAccount/Userpage/style.css
+++ b/UserAccount/Userpage/style.css
@@ -17,3 +17,26 @@ body{
     display: flex;
     flex-direction: column;
 }
+.content {
+    min-height: calc(100vh - 150px);
+    flex: 1 0 auto;
+    display: flex;
+    margin-left: 2%;
+    flex-direction: column;
+}
+.user_namephoto{
+    display: flex;
+    justify-content: space-around  ;
+}
+.user_photo{
+    font-size: 35px;
+    height: 50%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
+.user_onlyphoto{
+    width: 400px;
+    height: 300px;
+}
