--- a/sevices/style.css
+++ b/sevices/style.css
@@ -17,3 +17,16 @@ body{
     display: flex;
     flex-direction: column;
 }
+.aboutus{
+    height: 60px;
+    width: 90%;
+    display: flex;
+    background: linear-gradient(90deg, #575656 0%, #68686b 35%, #a8a9aa 100%);
+    margin-left: 10%;
+    font-size: 24px;
+    color: #9b9b9b;
+}
+.sq{
+    color: #d1cccc;
+    padding-left: 40px;
+}
