--- a/UserAccount/Userpage/style.css
+++ b/UserAccount/Userpage/style.css
@@ -78,3 +78,27 @@ body{
     background: white;
     color: #b70101;
 }
+.aboutus{
+    display: flex;
+    height: 60px;
+    width: 90%;
+    background: linear-gradient(90deg, #575656 0%, #68686b 35%, #a8a9aa 100%);
+    margin-left: 10%;
+    font-size: 24px;
+    color: #9b9b9b;
+}
+.footer{
+	height: 80px;
+    background: #575656;
+}
+.footer_content{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.footlnk{
+    font-size: 18px;
+}
+.footlnk:hover{
+    color: black;
+}
