--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -5,6 +5,12 @@ body{
     height: 7170px;
     position: absolute;
 }
+.wrapper {
+    min-height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
 .block1{
     height: 1080px;
     width: 1920px;
@@ -43,20 +49,21 @@ body{
     margin-top: -170px;
 }
 .header{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
     height: 80px;   
-    width: 99%;
     background: rgb(0, 0, 0);
     position: fixed;
     z-index: 3;
-    float: right;
 }
 .GW{
-    width: 100px;
+    width: auto;
     height: 60px;
-    background: black;
+    background: rgb(0, 0, 0);
     font-size: 28px;
     line-height: 10%;
-    position: absolute;
     padding: 15px 0 0 20px;
 }
 .GWlink{
@@ -68,17 +75,31 @@ body{
     animation: clr 0.4s;
 }
 .aboutus{
-    margin-top: 10px;
     display: flex;
-    height: 60px;
-    width: 1400px;
+    height: 80px;
+    width: 100%;
     float: right;
+    padding-top: 3%;
     background: rgb(0, 0, 0);
-}
-.alllink{
-    padding-top: 15px;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 5%;
+
     font-size: 35px;
     color: #d1cccc;
+}
+.phone{
+    margin-left: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.phone_number{
+    color: #d1cccc;
+}
+.phone_link{
+    text-decoration: none;
 }
 .sq{
     color: #d1cccc;
