--- a/MainpageReg/style.css
+++ b/MainpageReg/style.css
@@ -66,6 +66,19 @@ body{
     font-size: 35px;
     color: #d1cccc;
 }
+.phone{
+    margin-left: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.phone_number{
+    color: #d1cccc;
+}
+.phone_link{
+    text-decoration: none;
+}
 .sq{
     color: #d1cccc;
     padding-left: 30px;
