--- a/New_folder/style.css
+++ b/New_folder/style.css
@@ -33,6 +33,19 @@ body{
     font-size: 24px;
     color: #9b9b9b;
 }
+.phone{
+    margin-left: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.phone_number{
+    color: #d1cccc;
+}
+.phone_link{
+    text-decoration: none;
+}
 .check{
     margin-left: 8%;
     margin-top: 2%;
