--- a/entrance/style.css
+++ b/entrance/style.css
@@ -27,11 +27,25 @@
 .aboutus{
     display: flex;
     height: 60px;
-    width: 90%;
+    width: 100%;
+    align-items: center;
     background: linear-gradient(90deg, #575656 0%, #68686b 35%, #a8a9aa 100%);
     margin-left: 5%;
     font-size: 24px;
     color: #9b9b9b;
+}
+.phone{
+    margin-left: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.phone_number{
+    color: #d1cccc;
+}
+.phone_link{
+    text-decoration: none;
 }
 .sq{
     color: #d1cccc;
@@ -43,7 +57,6 @@
     top: 60px;
 }
 .GW{
-    width: 10%;
     height: 60px;
     background: #575656;
     font-size: 28px;
@@ -113,6 +126,9 @@ animation: clr 0.4s;
 }
 .sq:hover{
 animation: clr 0.4s;
+}
+.phone_link:hover{
+    animation: clr 0.4s;    
 }
 @keyframes clr{
 from{
