--- a/servicesReg/style.css
+++ b/servicesReg/style.css
@@ -26,6 +26,19 @@ body{
     font-size: 24px;
     color: #9b9b9b;
 }
+.phone{
+    margin-left: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.phone_number{
+    color: #d1cccc;
+}
+.phone_link{
+    text-decoration: none;
+}
 .sq{
     color: #d1cccc;
     padding-left: 40px;
