--- a/servicesReg/style.css
+++ b/servicesReg/style.css
@@ -21,23 +21,30 @@ body{
     height: 60px;
     width: 90%;
     display: flex;
+    align-items: center;
+    justify-content: space-around;
     background: linear-gradient(90deg, #575656 0%, #68686b 35%, #a8a9aa 100%);
     margin-left: 5%;
     font-size: 24px;
     color: #9b9b9b;
 }
 .phone{
-    margin-left: 1%;
+    width: 17%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    background: #a8a9aa;
 }
 .phone_number{
     color: #d1cccc;
 }
 .phone_link{
     text-decoration: none;
+}
+.phone_link:hover{
+    animation: clr 0.4s;    
 }
 .sq{
     color: #d1cccc;
@@ -47,6 +54,38 @@ body{
     min-height: calc(100vh - 150px);
     flex: 1 0 auto;
     display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.aboniments{
+    background: #8f8c8c;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.aboniment{ 
+    background:#b8b5b5;
+    width: 28%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.img_aboniment{
+    width: 100%;
+}
+.but_sub{
+    margin-bottom: 7px;
+    width: 130%;
+    height: 40px;
+    border-radius: 15px;
+
+}
+.but_sub:hover{
+    background: #575656;
+    color: #d1cccc;
+    cursor: pointer;
 }
 .check{
     margin-left: 8%;
