--- a/MainpageReg/style.css
+++ b/MainpageReg/style.css
@@ -1,26 +1,81 @@
 body{
-    width: 100%;
+    width: auto;
     overflow-x: hidden;
     background: white;
-    height: 7170px;
-    position: absolute;
+    height: 5470px;
+}
+.wrapper {
+    min-height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 .block1{
     height: 1080px;
-    width: 1920px;
-    background-color: black;
-    margin: -10px 0 0 -10px;
+    background: black url("../pictures/eERXP9QgrMk.jpg")  center/contain no-repeat;
 }
 .block2{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
     height: 920px;
-    width: 105%;
     background-color: white;
     margin: 100px 0 0 0px;
 }
+.block2_name{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
 .block3{
     height: 920px;
-    width: 105%;
+    width: 100%;
     background-color: white;
+}
+.block3_info{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+}
+.block3_text{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+
+}
+.block4{
+    width: 100%;
+    height: 1500px;
+    background: #829096;
+}
+.block4_info{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    background: url("../pictures/barbell.png");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 90%;
+
+}
+.bloks{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width:  100%;
+
+}
+.miniBlocks{
+    width: 500px;
+    height: 250px;
+    border-radius: 30px 30px 30px 30px;
+    background: #829096;
 }
 .imgMain{
     padding-left: 9%;
@@ -29,20 +84,21 @@ body{
     margin-top: -170px;
 }
 .header{
-    height: 80px;   
+    display: flex;
     width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    height: 80px;   
     background: rgb(0, 0, 0);
     position: fixed;
     z-index: 3;
-    float: right;
 }
 .GW{
-    width: 100px;
+    width: auto;
     height: 60px;
-    background: black;
+    background: rgb(0, 0, 0);
     font-size: 28px;
     line-height: 10%;
-    position: absolute;
     padding: 15px 0 0 20px;
 }
 .GWlink{
@@ -54,15 +110,12 @@ body{
     animation: clr 0.4s;
 }
 .aboutus{
-    margin-top: 10px;
     display: flex;
-    height: 60px;
-    width: 1400px;
-    float: right;
+    height: 80px;
+    width: 75%;
     background: rgb(0, 0, 0);
-}
-.alllink{
-    padding-top: 15px;
+    align-items: center;
+    justify-content: space-around;
     font-size: 35px;
     color: #d1cccc;
 }
@@ -78,10 +131,15 @@ body{
 }
 .phone_link{
     text-decoration: none;
+    color: #d1cccc;
 }
 .sq{
     color: #d1cccc;
     padding-left: 30px;
+}
+.phone_link:hover{
+    color: #797878;
+    animation: clr 0.4s;
 }
 .sq:hover{
     color: #797878;
@@ -132,36 +190,42 @@ to{
     color: #2A487C;
 }
 .img2{
-    display: inline-block;
-    position: relative;
-    left: 120%;
-    top: -330px;
+    width: 100%;
+    padding-left: 10%;
 }
 .img3{
     height: 700px;
     width: 900px;
     padding-left: 250px;
-    margin-top: -20%;
 }
 .img4{
     height: 700px;
     width: 900px;
-    padding-left: 45%;
-    margin-top: -27%;
+}
+.img5{
+    width: 100%;
+    height: 1260px;
+    margin-top: 5%;
 }
 .info{ 
-    position: absolute;
-    height: 270px;
-    width: 600px;
-    margin-left: 350px;
-    margin-top: 80px ;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    padding-left: 20%;
+    width: 100%;
     font-size: 25px;
 }
 .info2{
     text-align: center;
-    margin-top: -300px;
-    margin-left: -80px;
     width: 1300px;
+}
+.info_text{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 .txt1{
     text-justify: newspaper;
@@ -187,13 +251,19 @@ to{
     background-color: #797878; 
     color: #797878; 
     height: 2px;
+}footer{
+	height: 80px;
+    background: #131212;
 }
-.userLink{
+.footer_content{
     display: flex;
-
+    justify-content: space-around;
+    align-items: center;
 }
-.userimg{
-    padding-top: 10px;
-    width: 25px;
-    height: 20px;
+.footlnk{
+    font-size: 18px;
+    color: #ffffff;
+}
+.footlnk:hover{
+    color: rgb(110, 108, 108);
 }
