--- a/UserAccount/style.css
+++ b/UserAccount/style.css
@@ -89,19 +89,22 @@ a{
 }
 .aboutus{
     display: flex;
+    justify-content: space-around;
+    align-items: center;
     height: 60px;
-    width: 90%;
+    width: 75%;
     background: linear-gradient(90deg, #575656 0%, #68686b 35%, #a8a9aa 100%);
     margin-left: 5%;
     font-size: 24px;
     color: #9b9b9b;
 }
 .phone{
-    margin-left: 1%;
     display: flex;
+    height: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    background: #a8a9aa;
 }
 .phone_number{
     color: #d1cccc;
