--- a/services/style.css
+++ b/services/style.css
@@ -19,19 +19,23 @@ body{
 }
 .aboutus{
     height: 60px;
-    width: 90%;
+    width: 75%;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
     background: linear-gradient(90deg, #575656 0%, #68686b 35%, #a8a9aa 100%);
     margin-left: 5%;
     font-size: 24px;
     color: #9b9b9b;
 }
 .phone{
-    margin-left: 1%;
     display: flex;
     flex-direction: column;
+    height: 60px;
     align-items: center;
     justify-content: space-around;
+    width: 160px;
+    background: #a8a9aa;
 }
 .phone_number{
     color: #d1cccc;
@@ -47,6 +51,44 @@ body{
     min-height: calc(100vh - 150px);
     flex: 1 0 auto;
     display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.aboniments{
+    background: #8f8c8c;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.aboniment{ 
+    background:#b8b5b5;
+    width: 28%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.sub{
+    color: black;
+    text-decoration: none;
+}
+.img_aboniment{
+    width: 100%;
+}
+.but_sub{margin-bottom: 7px;
+    width: 130%;
+    height: 40px;
+    border-radius: 15px;
+
+}
+.but_sub:hover{
+    background: #575656;
+    color: #d1cccc;
+    cursor: pointer;
+}
+.but_sub:hover a{
+    color: #d1cccc;
 }
 .check{
     margin-left: 8%;
@@ -73,9 +115,15 @@ body{
         color: #d1cccc;
     }
     .lnk:hover{
+        color: black;
     animation: clr 0.4s;
     }
+    .phone_link:hover{
+        color:black;
+        animation: clr 0.4s;    
+    }
     .sq:hover{
+        color: black;
     animation: clr 0.4s;
     }
     @keyframes clr{
