--- a/New_folder/style.css
+++ b/New_folder/style.css
@@ -100,7 +100,7 @@ color: #d1cccc;
 }
 .error_text{
     background-color: #f1414f;
-    padding: 8px 0;
+    padding: 10px;
     display: none  ;
 }
 .pass_and_mes{
