--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -32,7 +32,7 @@ body{
 }
 .block3{
     height: 920px;
-    padding-left: -50%;
+    padding-top: 3%;
     background-color: white;
 }
 .block3_info{
@@ -77,7 +77,7 @@ body{
 }
 .header{
     display: flex;
-    width: 100%;
+    width: 99%;
     justify-content: space-around;
     align-items: center;
     height: 80px;   
